Переклад певних частин.

--- a/Resources/Prototypes/Datasets/Names/arachnid_last.yml
+++ b/Resources/Prototypes/Datasets/Names/arachnid_last.yml
@@ -1,71 +1,71 @@
 - type: dataset
   id: names_arachnid_last
   values:
-  - Agrestis
-  - Algarve
-  - Andohahela
-  - Aquatica
-  - Atra
-  - Blondi
-  - Cancerides
-  - Candidus
-  - Carraiensis
-  - Crocata
-  - Cthulhu
-  - Digua
-  - Dispar
-  - Diversicolor
-  - Domesticus
-  - Fera
-  - Florentina
-  - Formosanus
-  - Garciai
-  - Gemmosum
-  - Germanicum
-  - Gertschi
-  - Gracilicollis
-  - Hasselti
-  - Hibernalis
-  - Hochstetteri
-  - Marapu
-  - Marchingtoni
-  - Minutissima
-  - Mirabilis
-  - Montivaga
-  - Mullamullangensis
-  - Myopica
-  - Navus
-  - Nigrum
-  - Nuragicus
-  - Obscura
-  - Palpimanoides
-  - Personatus
-  - Phalangioides
-  - Radiatus
-  - Rainbowi
-  - Reclusa
-  - Reticulatus
-  - Riversi
-  - Rufipes
-  - Sandaliatus
-  - Sauvagesi
-  - Savignyi
-  - Scenicus
-  - Simus
-  - Spinimana
-  - Subrufa
-  - Sundaicum
-  - Tarantula
-  - Thoracica
-  - Thorelli
-  - Triangularis
-  - Trivialis
-  - Tuxtlensis
-  - Vatia
-  - Velox
-  - Venusta
-  - Viridans
-  - Walckenaeri
-  - Walckenaerius
-  - Wisharti
-  - X-Notata
+  - Агрестіс
+  - Алгарве
+  - Андос
+  - Акватіка
+  - Атра
+  - Деметра
+  - Канкройд
+  - Кандідоз
+  - Карранейзос
+  - Афродітус
+  - Ктулху
+  - Дигуа
+  - Диспар
+  - Афіна
+  - Доместікус
+  - Фера
+  - Флорентійкус
+  - Формозанус
+  - Гарція
+  - Геммосум
+  - Германікус
+  - Цианокобаламін
+  - Грациколліс
+  - Хассетлікус
+  - Гіберналіс
+  - Хохстретері
+  - Мапанія
+  - Маршингтонія
+  - Мінутіссімус
+  - Мірабіліус
+  - Монтівага
+  - Мулламгенез
+  - Міопіка
+  - Навус
+  - Нігрум
+  - Нурагікус
+  - Обскура
+  - Пальпіманоїди
+  - Персонатус
+  - Фалангіоїди
+  - Артеміда
+  - Кассіопея
+  - Реклюз
+  - Гефест
+  - Ріверсія
+  - Руфіпс
+  - Санділіатус
+  - Саувагей
+  - Савіньї
+  - Сценіус
+  - Сімус
+  - Спінімана
+  - Субруфа
+  - Сундайкум
+  - Тарантул
+  - Тораціка
+  - Тореллі
+  - Арей
+  - Тривіаліс
+  - Тукстлензіз
+  - Ватія
+  - Велокс
+  - Венера
+  - Віріданс
+  - Валькенарєрі
+  - Валькенаеріус
+  - Вишарт
+  - Нотата
