--- a/Resources/Prototypes/Datasets/Names/arachnid_first.yml
+++ b/Resources/Prototypes/Datasets/Names/arachnid_first.yml
@@ -1,77 +1,78 @@
 - type: dataset
   id: names_arachnid_first
   values:
-  - Amblyocarenum
-  - Aname
-  - Aname
-  - Aptostichus
-  - Archoleptoneta
-  - Argyroneta
-  - Atypoides
-  - Callobius
-  - Clubiona
-  - Cteniza
-  - Deinopis
-  - Delena
-  - Diploglena
-  - Drassodes
-  - Dysdera
-  - Entypesa
-  - Envia
-  - Eratigena
-  - Eresus
-  - Euagrus
-  - Goeldia
-  - Hersilia
-  - Hexathele
-  - Hibana
-  - Hickmania
-  - Huttonia
-  - Hypochilus
-  - Idiosoma
-  - Illawarra
-  - Kimura
-  - Kukulcania
-  - Lampona
-  - Latrodectus
-  - Leucauge
-  - Linyphia
-  - Loxosceles
-  - Lycosa
-  - Madagascarchaea
-  - Microhexura
-  - Missulena
-  - Misumena
-  - Moggridgea
-  - Nesticella
-  - Oarces
-  - Oecobius
-  - Oonops
-  - Paratropis
-  - Patu
-  - Peucetia
-  - Philodromus
-  - Pholcus
-  - Phoneutria
-  - Phryganoporus
-  - Pimoa
-  - Pisaura
-  - Progradungula
-  - Salticus
-  - Sason
-  - Scytodes
-  - Segestria
-  - Selenops
-  - Sphodros
-  - Spiroctenus
-  - Tartarus
-  - Tayshaneta
-  - Theotima
-  - Theraphosa
-  - Theridiosoma
-  - Trogloraptor
-  - Uloborus
-  - Ummidia
-  - Zodarion
-  - Zoropsis
-  - Zygiella
+  - Амбліокаренум
+  - Анаме
+  - Актинія
+  - Афстоптікус
+  - Архонт
+  - Аргіронета
+  - Атипоїдєс
+  - Каллобіус
+  - Клубіона
+  - Стеніція
+  - Дейнопес
+  - Делена
+  - Діплоглена
+  - Драссода
+  - Дісдера
+  - Антіпія
+  - Енвія
+  - Ератігена
+  - Ерес
+  - Талласос
+  - Гелдія
+  - Герцилія
+  - Гексатела
+  - Хібана
+  - Гікманія
+  - Хаттонія
+  - Гіпохілус
+  - Ідіосома
+  - Іллаварра
+  - Кімура
+  - Кукульканія
+  - Лампона
+  - Латродектус
+  - Лойкауген
+  - Лініфія
+  - Локсоскеллес
+  - Лікоса
+  - Мадагаскархей
+  - Мікрохекс
+  - Міссулена
+  - Місумена
+  - Могріджа
+  - Нестістелла
+  - Херксес
+  - Оекобій
+  - Юнопс
+  - Паратропер
+  - Пату
+  - Пейцетія
+  - Філодром
+  - Фолькус
+  - Фонейтрія
+  - Фріганопорус
+  - Пімоа
+  - Пізара
+  - Програндула
+  - Сальтікус
+  - Саксон
+  - Скіфозія
+  - Скіфія
+  - Таврія
+  - Сфодрос
+  - Спірохтенус
+  - Тартар
+  - Тартарус
+  - Херсонес
+  - Теотіма
+  - Ферафоза
+  - Терідосома
+  - Троглораптор
+  - Улобор
+  - Умідія
+  - Зодаріон
+  - Зоропсис
+  - Зігелла
