--- a/Resources/Prototypes/Datasets/Names/death_commando.yml
+++ b/Resources/Prototypes/Datasets/Names/death_commando.yml
@@ -1,62 +1,57 @@
 ﻿- type: dataset
   id: names_death_commando
   values:
-  - A whole bunch of spiders in a SWAT suit
-  - AMERICA
-  - Beat Punchbeef
-  - Blast Hardcheese
-  - Blast Thickneck
-  - Bold Bigflank
-  - Bolt Vanderhuge
-  - Brick Hardmeat
-  - Buck Plankchest
-  - Buff Drinklots
-  - Buff Hardback
-  - Butch Deadlift
-  - Crud Bonemeal
-  - Crunch Buttsteak
-  - Crush McStompbones
-  - Duke Killington
-  - Fist Rockbone
-  - Flint Ironstag
-  - Fridge Largebeet
-  - GORE Vidal
-  - George Melons
-  - Gibbs McLargehuge
-  - Gristle McThornBody
-  - Hank Chesthair
-  - Hans Testosteroneson
-  - Im going to kill you, im not even kidding
-  - Killiam Shakespeare
-  - Killing McKillingalot
-  - Lance Killiam
-  - Leonardo Da Viking
-  - Lump Beefrock
-  - Pack Blowfist
-  - Punch Rockgroin
-  - Punch Sideiron
-  - Punt Speedchunk
-  - Reef Blastbody
-  - Rex Dudekiller VII
-  - Rip Sidecheek
-  - Rip Steakface
-  - Roll Fizzlebeef
-  - Seamus McTosterone
-  - Sgt. Slaughter
-  - Sir Killaslot
-  - Slab Bulkhead
-  - Slab Squatthrust
-  - Slake Fistcrunch
-  - Slate Slabrock
-  - Smash Lampjaw
-  - Smoke Manmuscle
-  - Splint Chesthair
-  - Stabby McGee
-  - Stump Beefgnaw
-  - Stump Chunkman
-  - THAT DAMN TRAITOR GEORGE MELONS
-  - The last thing you will ever see
-  - Theodore Pain
-  - Thick McRunfast
-  - Touch Rustrod
-  - Trunk Slamchest
+  - ЗСУ
+  - Добрий вечір ми з України
+  - Микола Парасюк
+  - Бетро Борошенко
+  - Роман Діденко
+  - Зебоба Боневтік
+  - Якац Ап
+  - Боріс Джонсонюк
+  - Яна Солях
+  - Міцний Горішок
+  - Бутч Дедліфт
+  - Кранч Батстейк
+  - Краш Стомпбоунс
+  - Дюк Кіллінгтон
+  - Кулак Рокбоун
+  - Флінт Айронстаг
+  - Кабаноси без Холодоса
+  - Гор Відал
+  - Джордж Мелоунс
+  - Гіббс МакЛарджхаг
+  - Ґрістл МакТорнбоді
+  - Хенк Честхейр
+  - Ганс Тестостеронсон
+  - Я вб'ю тебе я не жартую
+  - Кілліам Шекспір
+  - Мак Кіллінгалот
+  - Ланс Кілліам
+  - Леонардо да Вікінг
+  - Грудка Біфрок
+  - Зграя Кулак
+  - Удар Кішкохлопець
+  - Удар Кішкодівчина
+  - Миска Рису
+  - Дзідзьо
+  - Крутий Чувак
+  - Шеймус МакТостерон
+  - Сержант Слотер
+  - Сер Кілласлот
+  - Слейб Булкхед
+  - Слейб Скваттраст
+  - Слейк Фісткранч
+  - Слейт Слаброк
+  - Смэш Лампджоу
+  - М'язистий Чувак
+  - Сплінт Честхейр
+  - Колючий МакГі
+  - Пень Біфгноу
+  - Пень-Чанкмен
+  - КЛЯТИЙ ЗРАДНИК РОМАН ДІДЕНКО
+  - Останнє що ти побачиш
+  - Теодор Пейн
+  - Товстий МакРанфаст
+  - Тач Растрод
+  - Сундук Слемчест
