--- a/Resources/Prototypes/Datasets/Names/diona.yml
+++ b/Resources/Prototypes/Datasets/Names/diona.yml
@@ -1,50 +1,50 @@
 - type: dataset
   id: DionaFirst
   values:
-  - Moss
-  - Mushroom
-  - Herb
-  - Ivy
-  - Stalk
-  - Petal
-  - Thorn
-  - Rose
-  - Dandelion
-  - Birch
-  - Willow
-  - Bay
-  - Lake
-  - River
-  - Creek
-  - Meadow
-  - Canyon
-  - Mountain
-  - Peak
-  - Garden
-  - Soil
-  - Flower
+  - Мох
+  - Гриб
+  - Трава
+  - Плющ
+  - Стебло
+  - Пелюстка
+  - Шип
+  - Троянда
+  - Кульбаба
+  - Береза
+  - Верба
+  - Затока
+  - Озеро
+  - Річка
+  - Струмок
+  - Луг
+  - Каньйон
+  - Гора
+  - Пік
+  - Сад
+  - Грунт
+  - Квітка
 
 - type: dataset
   id: DionaLast
   values:
-  - Peace
-  - Harmony
-  - Relaxation
-  - Serendipity
-  - Calmness
-  - Introspection
-  - Union
-  - Comfort
-  - Dreams
-  - Quietude
-  - Balance
-  - Gentleness
-  - Placidity
-  - Repose
-  - Serenity
-  - Stillness
-  - Tranquility
-  - Ease
-  - Equilibrium
-  - Composure
-  - Control
+  - Миру
+  - Гармонії
+  - Релаксації
+  - Випадковості
+  - Спокою
+  - Самоаналізу
+  - Єднання
+  - Комфорту
+  - Мрії
+  - Тиші
+  - Балансу
+  - М'якості
+  - Умиротворення
+  - Спокою
+  - Безтурботності
+  - Тиші
+  - Умиротворення
+  - Легкості
+  - Рівноваги
+  - Врівноваженості
+  - Контролю
