--- a/Resources/Prototypes/Datasets/Names/reptilian_female.yml
+++ b/Resources/Prototypes/Datasets/Names/reptilian_female.yml
@@ -1,166 +1,166 @@
 - type: dataset
   id: names_reptilian_female
   values:
-  - Adzi
-  - Ah
-  - Ahaht
-  - Ajim
-  - Akeenus
-  - Akish
-  - Akishan
-  - Aleeto
-  - Am
-  - Amussa
-  - An
-  - Anozz
-  - Asheemar
-  - Asska
-  - Awas
-  - Azala
-  - Azbai
-  - Azeez
-  - Azum
-  - Banalz
-  - Bar
-  - Baseenar
-  - Beek
-  - Beekatan
-  - Beekus
-  - Beela
-  - Beelei
-  - Beem
-  - Beewos
-  - Bejeen
-  - Ber
-  - Betzi
-  - Bishalus
-  - Bokeeus
-  - Bur
-  - Bura
-  - Chalaree
-  - Chana
-  - Chanil
-  - Chee
-  - Cheesh
-  - Chimatei
-  - Chirurgeon
-  - Cholasistu
-  - Chuna
-  - Churasu
-  - Crath
-  - Dar
-  - Deeja
-  - Deesei
-  - Deesh
-  - Deetsan
-  - Deetwos
-  - Dooka
-  - Druja
-  - Eepa
-  - Ei
-  - Eix
-  - El
-  - Ereel
-  - Eutei
-  - Gai
-  - Gih
-  - Gilm
-  - Gish
-  - Go
-  - Hal
-  - Hul
-  - Ja
-  - Jaseen
-  - Jasuda
-  - Jeed
-  - Jeen
-  - Kajul
-  - Kal
-  - Kasa
-  - Keel
-  - Keerava
-  - Kiurz
-  - Kud
-  - La
-  - Lee
-  - Lei
-  - Lifts
-  - Liurz
-  - Lurasha
-  - Ma
-  - Mach
-  - Marz
-  - Meedish
-  - Meeh
-  - Meema
-  - Meen
-  - Meena
-  - Meenus
-  - Meerana
-  - Meesei
-  - Meeus
-  - Mei
-  - Milah
-  - Mim
-  - Mota
-  - Mudeska
-  - Muz
-  - Na
-  - Nakuma
-  - Nam
-  - Nassa
-  - Natoo
-  - Neesha
-  - Neetizei
-  - Neetra
-  - Neeus
-  - Niima
-  - Numeen
-  - Nuralg
-  - Nush
-  - Ocheeva
-  - Okur
-  - Olank
-  - On
-  - Onasha
-  - Osheeka
-  - Pasha
-  - Ra
-  - Rana
-  - Raniur
-  - Ree
-  - Reesa
-  - Rei
-  - Sa
-  - Saak
-  - Sanax
-  - Seeba
-  - Seed
-  - Seen
-  - Shah
-  - Shahvee
-  - Shaleez
-  - Shatalg
-  - Sheer
-  - Shei
-  - Sigerthe
-  - Skaleel
-  - Sudie
-  - Tail
-  - Tar
-  - Tasha
-  - Tei
-  - Telixith
-  - Tumma
-  - Veek
-  - Wan
-  - Wazei
-  - Weedum
-  - Weewish
-  - Witseidutsei
-  - Wuja
-  - Wujeeta
-  - Wusha
-  - Xil
-  - Zish
-  - Zollassa
+  - Адзі
+  - Ах
+  - Ахат
+  - Аджим
+  - Акінусс
+  - Акіш
+  - Акішшан
+  - Алето
+  - Ам
+  - Амусса
+  - Ат
+  - Аносс
+  - Ашшерман
+  - Асска
+  - Авасс
+  - Азала
+  - Азбей
+  - Ассес
+  - Ассум
+  - Тея
+  - Бар
+  - Бассінар
+  - Бік
+  - Бікатун
+  - Бікус
+  - Біла
+  - Білеі
+  - Бім
+  - Бівосс
+  - Біджин
+  - Бер
+  - Бетсі
+  - Бішшалус
+  - Бокеус
+  - Бур
+  - Бура
+  - Чалар
+  - Чана
+  - Чаніл
+  - Чі
+  - Чішш
+  - Чіматеі
+  - Чірургеон
+  - Чолассісту
+  - Чуна
+  - Чурасау
+  - Крат
+  - Дар
+  - Деджа
+  - Дезеі
+  - Дішш
+  - Дітсан
+  - Дітвосс
+  - Дока
+  - Друджа
+  - Іпа
+  - Ей
+  - Еікс
+  - ЕЛ
+  - Ерел
+  - Еутеі
+  - Гай
+  - Гіх
+  - Гілм
+  - Гішш
+  - Го
+  - Хел
+  - Хул
+  - Джа
+  - Джасен
+  - Джассуда
+  - Джид
+  - Джин
+  - Kаджул
+  - Кел
+  - Каса
+  - Кіл
+  - Кірава
+  - Каюрз
+  - Куд
+  - Ла
+  - Лі
+  - Лей
+  - Ліфтс
+  - Ліурз
+  - Лурешша
+  - Ма
+  - Матч
+  - Марсс
+  - Медіш
+  - Міх
+  - Меме
+  - Мін
+  - Міна
+  - Mенус
+  - Mірана
+  - Mіссей
+  - Mеус
+  - Mей
+  - Mілах
+  - Mайм
+  - Mота
+  - Mудесска
+  - Mус
+  - На
+  - Накума
+  - Нам
+  - Насса
+  - Нато
+  - Ніша
+  - Нетізей
+  - Нетра
+  - Ніус
+  - Найімен
+  - Нумен
+  - Нуралг
+  - Нушш
+  - Очіва
+  - Oкур
+  - Oланк
+  - Oн
+  - Oнашша
+  - Oшшіка
+  - Пеше
+  - Ра
+  - Рана
+  - Раніур
+  - Рі
+  - Решша
+  - Рей
+  - Са
+  - Сак
+  - Санакс
+  - Сіба
+  - Сід
+  - Сін
+  - Шашш
+  - Шахві
+  - Шаліз
+  - Шаталг
+  - Шір
+  - Шей
+  - Сігаретхе
+  - Скаліл
+  - Судай
+  - Таіль
+  - Tар
+  - Taша
+  - Teй
+  - Teліксіт
+  - Tуман
+  - Вайк
+  - Ван
+  - Вассей
+  - Відум
+  - Вівішш
+  - Вайтсейідетсей
+  - Вуджа
+  - Вуджетта
+  - Вуша
+  - Ксіл
+  - Зіша
+  - Золасса
