--- a/Resources/Prototypes/Datasets/Names/revenant.yml
+++ b/Resources/Prototypes/Datasets/Names/revenant.yml
@@ -1,55 +1,49 @@
 - type: dataset
   id: RevenantType
   values:
-  - essence
-  - ghost
-  - phantom
-  - poltergeist
-  - revenant
-  - soul
-  - spectre
-  - spirit
+  - сутність
+  - привид
+  - фантом
+  - полтергейст
+  - привид
+  - душа
+  - привид
+  - дух
 
 - type: dataset
   id: RevenantAdjective
   values:
-  - abysmal
-  - abyssal
-  - brutal
-  - dark
-  - endless
-  - eternal
-  - fiery
-  - hateful
-  - hideous
-  - hilarious
-  - indifferent
-  - malevolent
-  - peaceful
-  - searing
-  - silent
-  - spiteful
-  - vicious
-  - violent
+  - бездонної
+  - жорстокої
+  - темної
+  - нескінченної
+  - вічної
+  - вогняної
+  - ненависної
+  - огидної
+  - веселої
+  - байдужої
+  - зловмисної
+  - мирної
+  - пекучої
+  - мовчазної
+  - злісної
+  - ненависної
+  - жорстокої
 
 - type: dataset
   id: RevenantTheme
   values:
-  - agony
-  - anger
-  - death
-  - despair
-  - desperation
-  - destruction
-  - disease
-  - grief
-  - hate
-  - hellfire
-  - laughter
-  - misery
-  - ruin
-  - salt
-  - screams
-  - sorrow
-  - suffering
-  - vengeance
+  - агонії
+  - смерті
+  - відча
+  - відчай
+  - руїни
+  - хвороби
+  - аїди
+  - ненависті
+  - супернової
+  - руїна
+  - діви
+  - печалі
+  - помсти
